--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular-froala-wysiwyg": "^2.7.2-1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "ng2-pagination": "^2.0.2",
     "rxjs": "^5.5.2",
+    "tinymce": "^4.7.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
